CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

# DEBUG|RELEASE|RELWITHDEBINFO|MINSIZEREL
# SET (CMAKE_BUILD_TYPE DEBUG)
SET (CMAKE_BUILD_TYPE DEBUG)

# Application name
SET (APP_NAME jvalue)

# Project name
PROJECT (${APP_NAME})

# Compiler flags
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")

# Directories
SET (SRC_DIR ${PROJECT_SOURCE_DIR}/src)
SET (INC_DIR ${PROJECT_SOURCE_DIR}/include)
SET (LIB_DIR ${PROJECT_SOURCE_DIR}/lib)
SET (TST_DIR ${PROJECT_SOURCE_DIR}/test)

#ENABLE_TESTING ()

ADD_EXECUTABLE (${APP_NAME} "${PROJECT_SOURCE_DIR}/main.cpp")

###### BOOST ###########
#FIND_PACKAGE(Boost REQUIRED)
# SET (Boost_USE_STATIC_LIBS ON)
# SET (Boost_USE_MULTITHREADED ON)

INCLUDE_DIRECTORIES (${INC_DIR})

# ADD_SUBDIRECTORY( ${SRC_DIR}  )

# TARGET_LINK_LIBRARIES()

